--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,32 @@ certifi==2020.4.5.1
 charset-normalizer==2.0.7
 click==8.0.4
 colorama==0.4.4
+defusedxml==0.7.1
+diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.0.7
+django-autocomplete-light==3.9.1
 django-bootstrap3==21.2
+django-filter==21.1
+django-import-export==2.7.1
 django-jquery==3.1.0
 django-phone-verify==0.1.1
 django-phonenumber-field==6.0.0
+django-rest-framework==0.1.0
 django-timezone-field==4.0
+django-widget-tweaks==1.4.12
 djangorestframework==3.11.0
 djlint==0.7.5
+et-xmlfile==1.1.0
 Faker==4.1.0
 future==0.18.2
 gunicorn==20.0.4
 html5lib==1.1
 idna==3.3
 importlib-metadata==4.11.2
+MarkupPy==1.14
+odfpy==1.4.1
+openpyxl==3.0.9
 pathspec==0.9.0
 phonenumbers==8.12.37
 Pillow==8.4.0
@@ -37,6 +48,7 @@ reportlab==3.6.3
 requests==2.26.0
 six==1.14.0
 sqlparse==0.3.1
+tablib==3.2.0
 text-unidecode==1.3
 toml==0.10.2
 tomlkit==0.9.2
@@ -47,4 +59,6 @@ webencodings==0.5.1
 whitenoise==5.1.0
 wincertstore==0.2
 xhtml2pdf==0.2.5
+xlrd==2.0.1
+xlwt==1.3.0
 zipp==3.7.0
