--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+APScheduler==3.9.1
 arabic-reshaper==2.1.3
 asgiref==3.2.7
 autopep8==1.6.0
+backports.zoneinfo==0.2.1
 certifi==2020.4.5.1
 charset-normalizer==2.0.7
 click==8.0.4
@@ -9,6 +11,7 @@ defusedxml==0.7.1
 diff-match-patch==20200713
 dj-database-url==0.5.0
 Django==3.0.7
+django-apscheduler==0.6.2
 django-autocomplete-light==3.9.1
 django-bootstrap3==21.2
 django-filter==21.1
@@ -42,6 +45,7 @@ python-bidi==0.4.2
 python-dateutil==2.8.1
 python-dotenv==0.19.2
 pytz==2020.1
+pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 regex==2022.3.2
 reportlab==3.6.3
@@ -54,6 +58,8 @@ toml==0.10.2
 tomlkit==0.9.2
 tqdm==4.63.0
 twilio==7.3.1
+tzdata==2022.1
+tzlocal==4.2
 urllib3==1.26.7
 webencodings==0.5.1
 whitenoise==5.1.0
